# DriveIQ

./: .env.example  .gitignore  .grype.yaml  .trivyignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: security-scan.yml
.well-known/openvex/: no-fix.openvex.json
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  chat.py  import_data.py  maintenance.py  moe.py  pages.py  reminders.py  search.py  uploads.py  vehicle.py
backend/app/core/: config.py  database.py  llm_client.py  qdrant_client.py  rate_limit.py  redis_client.py  security.py
backend/app/models/: __init__.py  document.py  maintenance.py  reminder.py  vehicle.py
backend/app/schemas/: __init__.py  maintenance.py  reminder.py  vehicle.py
backend/app/services/: carfax_parser.py  document_ingestion.py  embeddings.py  enhanced_search.py  moe_system.py  page_images.py  query_router.py  reminder_generator.py  vector_search.py
backend/scripts/: ingest_documents.py  setup-db.sh
database/: init.sql
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
docker-extension/: .dockerignore  Dockerfile  Makefile  docker-compose.yaml  metadata.json
docker-extension/ui/: index.html  package-lock.json  package.json  tailwind.config.js
docker-extension/ui/src/: App.tsx  Chat.tsx  ChatContext.tsx  ChatWidget.tsx  Dashboard.tsx  Documents.tsx  api.ts  (+5 more)
docs/: Maintenance_Audit_Report.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
mcp/: claude_desktop_config.json  server.py
scripts/: ingest_documents.py  ingest_to_qdrant.py
(+14 files in other folders)
