[project]
name = "driveiq-backend"
version = "1.0.1"
description = "DriveIQ Vehicle Management API"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # FastAPI
    "fastapi>=0.123.0",
    "uvicorn[standard]>=0.38.0",
    "python-multipart>=0.0.22",
    "starlette>=0.50.0",

    # Database
    "sqlalchemy>=2.0.45",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.4.2",
    "alembic>=1.17.2",

    # Redis
    "redis>=5.0.1",

    # Vector Database
    "qdrant-client>=1.9.0",

    # Validation
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "email-validator>=2.1.0",

    # Authentication
    "PyJWT>=2.10.1",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.2.0,<4.0.0",  # bcrypt 4.x is incompatible with passlib

    # AI/ML
    "anthropic>=0.75.0",
    "sentence-transformers>=3.1.0",
    "torch>=2.2.0",
    "pypdf>=6.6.0",
    "pymupdf>=1.23.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.28.1",
    "tenacity>=8.2.3",

    # Security pins (Snyk)
    "pillow>=12.1.1",
    "transformers>=4.36.0",
    "urllib3>=2.6.3",
    "sentencepiece>=0.2.1",
    "nltk>=3.9",
    "wheel>=0.46.2",
    "setuptools>=78.1.1",
    "zipp>=3.19.1",
    "dnspython>=2.6.1",
    "filelock>=3.20.1",
    "requests>=2.32.2",
    "scikit-learn>=1.5.0",
    "numpy>=1.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "black>=25.1.0",
    "isort>=5.12.0",
    "mypy>=1.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
